# workshop-python-entornos-profesionales

./: README.md  pyproject.toml
reflex-web-demo/: .gitignore  README.md  notify.py  rxconfig.py
reflex-web-demo/reflex_web_demo/: __init__.py  reflex_web_demo.py
reflex-web-demo/reflex_web_demo/model/: __init__.py  note_model.py
reflex-web-demo/reflex_web_demo/repository/: __init__.py  connection_db.py  note_repository.py
reflex-web-demo/reflex_web_demo/service/: note_service.py
