[tool.poetry]
name = "workshop-python-entornos-profesionales"
version = "0.1.0"
description = ""
authors = ["sergiosampayob <sergio.sampayo@intelygenz.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
gradio = "^5.7.1"
phonemizer = "^3.3.0"
timm = "^1.0.11"
matplotlib = "^3.9.3"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
